# hw-agent

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docker-publish-mcp.yml  docker-publish-tui.yml  docker-publish.yml
configs/: agent.all.debug.yaml  agent.cpu-discrete-gpu.yaml  agent.cpu-only.yaml  agent.cpu-tegrastats-jetson.yaml  agent.yaml
docker/: Dockerfile  docker-compose.gpu.yml  docker-compose.yml  init-redis.sh
docker/grafana/dashboards/: edge-node.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: redis.yml
docs/: python-redis-tui-layout.md  redis-timeseries-metrics.md
include/core/: agent.hpp  config.hpp  math.hpp  sampler.hpp  timestamp.hpp
include/derived/: io_pressure.hpp  latency_jitter.hpp  memory_pressure.hpp  power_pressure.hpp  scheduler_pressure.hpp  thermal_pressure.hpp
include/model/: signal_frame.hpp
include/risk/: realtime_risk.hpp  saturation_risk.hpp  system_state.hpp
include/sensors/: cpu.hpp  cpufreq.hpp  disk.hpp  interrupts.hpp  memory.hpp  network.hpp  power.hpp  psi.hpp  softirqs.hpp  tegrastats.hpp  thermal.hpp
include/sensors/gpu/: gpu.hpp
include/sinks/: redis_ts.hpp  stdout_debug.hpp
scripts/: create_redis_schema.sh  demo_watch.sh
src/: main.cpp
src/core/: agent.cpp  config.cpp  sampler.cpp
src/derived/: io_pressure.cpp  latency_jitter.cpp  memory_pressure.cpp  power_pressure.cpp  scheduler_pressure.cpp  thermal_pressure.cpp
src/risk/: realtime_risk.cpp  saturation_risk.cpp  system_state.cpp
src/sensors/: cpu.cpp  cpufreq.cpp  disk.cpp  interrupts.cpp  memory.cpp  network.cpp  power.cpp  psi.cpp  softirqs.cpp  tegrastats.cpp  thermal.cpp
src/sensors/gpu/: gpu_none.cpp  gpu_nvml.cpp
src/sinks/: redis_ts.cpp  stdout_debug.cpp
tests/: agent_unit_tests.cpp  risk_unit_tests.cpp  sensors_unit_tests.cpp
tools/hw-agent-mcp/: CMakeLists.txt  Dockerfile  README.md
tools/hw-agent-mcp/include/mcp/: jsonrpc.hpp  server.hpp  tools.hpp
tools/hw-agent-mcp/src/: jsonrpc.cpp  main.cpp  server.cpp
tools/hw-agent-mcp/src/tools/: metrics_summary.cpp
tools/hw-agent-tui/: .env.example  README.md  pyproject.toml
tools/hw-agent-tui/docker/: Dockerfile  docker-compose.ops.yml
tools/hw-agent-tui/src/hw_agent_tui/: __init__.py  __main__.py  app.py
tools/hw-agent-tui/src/hw_agent_tui/metrics/: derived.py  history.py
tools/hw-agent-tui/src/hw_agent_tui/redis/: client.py  collectors.py  parser.py  sampler.py
tools/hw-agent-tui/src/hw_agent_tui/runtime/: controller.py  state.py
tools/hw-agent-tui/src/hw_agent_tui/ui/screens/: dashboard.py
tools/hw-agent-tui/src/hw_agent_tui/ui/widgets/: sparkline.py  stat_tile.py  status_bar.py
tools/hw-agent-tui/tests/: test_collectors.py  test_dashboard.py  test_derived_metrics.py  test_parser.py
tools/hw-agent-tui/tests/fixtures/: info_default.txt  info_replica.txt
