[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw-agent-tui"
version = "0.1.0"
description = "Redis terminal dashboard for hw-agent operators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.58.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
hw-agent-tui = "hw_agent_tui.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
